# teemer

./: .gitignore  Cargo.toml  README.md  flake.nix
config/: simulation.toml
src/: components.rs  config.rs  lore.toml  lore.yaml  main.rs  resources.rs  simulation.toml  simulation.yaml  systems.rs
src/systems/: rendering.rs  simulation.rs
templates/: lore.toml  lore.yaml  simulation.toml  simulation.yaml
