[package]
name = "teemlabs"
version = "0.4.2"
edition = "2024"

[dependencies]
avian2d = "0.4"
bevy = "0.17"
bevy_capture = { git = "https://github.com/alexisjapas/bevy_capture", branch = "main", features = ["mp4_ffmpeg_cli_pipe"] }
chrono = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
